--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 Addendum Template.aux
 Addendum Template.synctex.gz
+Apartment Rules and Regulations.aux
+Apartment Rules and Regulations.synctex.gz
+Apartment Rules and Regulations.log
